--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
   "author": "Oluranti Otuyinka",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^6.5.0",
+    "cypress": "^6.9.1",
+    "cypress-cucumber-preprocessor": "^3.0.0",
     "faker": "^5.4.0",
-    "prettier": "^2.2.1",
-    "cypress-cucumber-preprocessor": "^3.0.0"
+    "prettier": "^2.2.1"
   },
   "dependencies": {
     "cypress-plugin-tab": "^1.0.5"
